--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       How to link Product Strategy and Experience with Jobs-to-be-done
     </p>
     <p>
-      Thomas Fröhlich, Product Designer, Team Builder & Strategist, IBM
+      <b>Thomas Fröhlich</b>, Product Designer, Team Builder & Strategist, IBM
 
     <p>
       Mind the gap between platform and train.
