--- a/index.html
+++ b/index.html
@@ -19,11 +19,15 @@
     </div>
 
     <div id="next-meetup">
-      <span class="important-info">19 Uhr, 8. Mai</span> 2018<br>
-      <span class="important-info">Thomas Fröhlich</span>, IBM<br>
-      <span class="important-info"><a href="https://www.google.com/maps/search/?api=1&query=Bothestra%C3%9Fe+11+-+15%2C+M%C3%BCnchen%2C+de">AutoScout 24</a></span>, München
-      <a class="icon-link" href="https://www.google.com/maps/search/?api=1&query=Bothestra%C3%9Fe+11+-+15%2C+M%C3%BCnchen%2C+de"><i class="fa fa-map-marker"></i></a><br>
-      Registrieren: <a href="https://www.meetup.com/DT-Muc/events/250069805/">Meetup</a>
+      <span class="important-info">19 Uhr, 20. Juni</span> 2018<br>
+      <span class="important-info">Alexander de Baptistis</span>, Valtech<br>
+      <span class="important-info"><a
+          href="https://www.google.com/maps/search/?api=1&query=Friedenheimer+Br%C3%BCcke+29%2C+80639+M%C3%BCnchen%2C+M%C3%BCnchen%2C+de">Valtech</a></span>,
+      München
+      <a class="icon-link"
+         href="https://www.google.com/maps/search/?api=1&query=Friedenheimer+Br%C3%BCcke+29%2C+80639+M%C3%BCnchen%2C+M%C3%BCnchen%2C+de"><i
+          class="fa fa-map-marker"></i></a><br>
+      Registrieren: <a href="https://www.meetup.com/DT-Muc/events/251398130">Meetup</a>
     </div>
   </section>
 
@@ -34,33 +38,20 @@
     </p>
 
     <p class="talk-title">
-      How to link Product Strategy and Experience with Jobs-to-be-done
+      Design Thinking Coaching Ausbildung an der D-School, Hasso-Plattner-Institut
     </p>
     <p>
-      <b>Thomas Fröhlich</b>, Product Designer, Team Builder & Strategist, IBM
+      <b>Alexander de Baptistis</b>, Creative Director, Valtech GmbH
 
     <p>
-      Mind the gap between platform and train.
-      <p>
-      How Strategy and Experience can be linked with Jobs-to-be-done
-
-
-    <p>
-      The Design profession has successfully claimed its seat as the ultimate guarantor of differentiating product experiences. Agencies evolved into in-house design organizations and designers have the opportunity to deliver great user experiences and to innovate future strategies right at the core these companies.
-
-    <p>
-      However, many great products suffer from a missing link between product strategy and experience. On the one side, great products disappear from the market and on the other side, great product strategies never surface.
-
-    <p>
-      In this talk you will learn about best practices from NOKIA, Microsoft, HERE and IBM, where I was working with Jobs-do-be-done inspired methodologies to successfully close the gap between product strategy and experience. I am going to present a handy framework to get the most out of Design Thinking to improve your company’s design maturity, informed by Clay Christensen, Tony Ulwick, Alan Klement and so many more from the design community.
+      Erfahrungsbericht über die Design Thinking Coaching Ausbildung an der D-School am Hasso-Plattner-Institut
     </p>
 
-    <p>
-      Thomas Fröhlich is consulting large corporates and start-ups in their digital transformation, equipped with a deep understanding of latest mobile technology, applied user-centered design methodologies and creative team performance management. At IBM, Thomas brings delight, ease-of-use and artificial intelligence to the long-neglected world of B2B companies.
-
-    <p>
-      Prior to this Thomas has spent the last decade in different product and design roles as an Information Architect, Strategy Designer and Design Manager. In 2014, the products Thomas designed and directed for Nokia and Microsoft were used by one out of 140 phone owners worldwide. Inspired by the the creative freedom of animation design and storytelling in his early days, Thomas enjoys crafting experiences that people use and enjoy ever since.
-    </p>
+    <ul>
+      <li>Herausforderungen an das Coaching</li>
+      <li>Den eigenen Coaching Stil finden</li>
+      <li>Teilnehmer und Teamdynamik lesen</li>
+    </ul>
 
     <p class="title">
       Hello, World!
