add next stammtisch

--- a/index.html
+++ b/index.html
@@ -19,15 +19,11 @@
     </div>
 
     <div id="next-meetup">
-      <span class="important-info">19 Uhr, 20. Juni</span> 2018<br>
-      <span class="important-info">Alexander de Baptistis</span>, Valtech<br>
-      <span class="important-info"><a
-          href="https://www.google.com/maps/search/?api=1&query=Friedenheimer+Br%C3%BCcke+29%2C+80639+M%C3%BCnchen%2C+M%C3%BCnchen%2C+de">Valtech</a></span>,
-      München
-      <a class="icon-link"
-         href="https://www.google.com/maps/search/?api=1&query=Friedenheimer+Br%C3%BCcke+29%2C+80639+M%C3%BCnchen%2C+M%C3%BCnchen%2C+de"><i
-          class="fa fa-map-marker"></i></a><br>
-      Registrieren: <a href="https://www.meetup.com/DT-Muc/events/251398130">Meetup</a>
+      <span class="important-info">19 Uhr, 12. Juli</span> 2018<br>
+      <span class="important-info">Stammtisch<br></span>
+      <span class="important-info"><a href="http://www.ocui.de">ocui</a></span>, München
+      <a class="icon-link" href="https://goo.gl/maps/m9aH1LB6jJr"><i class="fa fa-map-marker"></i></a><br>
+      Registrieren: TBD
     </div>
   </section>
 
@@ -38,20 +34,20 @@
     </p>
 
     <p class="talk-title">
-      Design Thinking Coaching Ausbildung an der D-School, Hasso-Plattner-Institut
-    </p>
-    <p>
-      <b>Alexander de Baptistis</b>, Creative Director, Valtech GmbH
-
-    <p>
-      Erfahrungsbericht über die Design Thinking Coaching Ausbildung an der D-School am Hasso-Plattner-Institut
+      Stammtisch
     </p>
 
-    <ul>
-      <li>Herausforderungen an das Coaching</li>
-      <li>Den eigenen Coaching Stil finden</li>
-      <li>Teilnehmer und Teamdynamik lesen</li>
-    </ul>
+    <p>
+      Wir wollen uns in lockerer Atmosphäre über Design Thinking, Innovationen und verschiedene andere Themen unterhalten.
+    </p>
+
+    <p>
+      Wir werden uns um 19 Uhr am 9. April 2018 bei <a href="http://www.ocui.de">ocui</a> treffen.
+    </p>
+
+    <p>
+      Wir wollen uns in lockerer Atmosphäre über Design Thinking, Innovationen und verschiedene andere Themen unterhalten.
+    </p>
 
     <p class="title">
       Hello, World!
