--- a/index.html
+++ b/index.html
@@ -19,35 +19,12 @@
     </div>
 
     <div id="next-meetup">
-      <span class="important-info">19 Uhr, 12. Juli</span> 2018<br>
-      <span class="important-info">Stammtisch<br></span>
-      <span class="important-info"><a href="http://www.ocui.de">ocui</a></span>, München
-      <a class="icon-link" href="https://goo.gl/maps/m9aH1LB6jJr"><i class="fa fa-map-marker"></i></a><br>
-      Registrieren: <a href="https://www.meetup.com/DT-Muc/events/252533102">Meetup</a>
+      <span class="important-info">Sommerpause</span><br>
+      Wir sind im<br><span class="important-info">September</span> 2018<br>wieder da.
     </div>
   </section>
 
   <section id="description">
-
-    <p class="title">
-      Join Us
-    </p>
-
-    <p class="talk-title">
-      Stammtisch
-    </p>
-
-    <p>
-      Wir wollen uns in lockerer Atmosphäre über Design Thinking, Innovationen und verschiedene andere Themen unterhalten.
-    </p>
-
-    <p>
-      Wir werden uns um 19 Uhr am 12. Juli 2018 bei <a href="http://www.ocui.de">ocui</a> treffen.
-    </p>
-
-    <p>
-      Wir wollen uns in lockerer Atmosphäre über Design Thinking, Innovationen und verschiedene andere Themen unterhalten.
-    </p>
 
     <p class="title">
       Hello, World!
