--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div id="next-meetup">
       <span class="important-info">Sommerpause</span><br>
-      Wir sind im<br><span class="important-info">September</span> 2018<br>wieder da.
+      Wir sind im<br><span class="important-info">Oktober</span> 2018<br>wieder da.
     </div>
   </section>
 
