--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     </div>
 
     <div id="next-meetup">
-      <span class="important-info">Sommerpause</span><br>
-      Wir sind im<br><span class="important-info">Oktober</span> 2018<br>wieder da.
+      <span class="important-info">Nächstes Treffen</span><br>
+      <span class="important-info">14.11.2018 18:30 Uhr</span>
     </div>
   </section>
 
