--- a/index.html
+++ b/index.html
@@ -19,13 +19,47 @@
     </div>
 
     <div id="next-meetup">
-      <span class="important-info">Nächstes Treffen</span><br>
-      <span class="important-info">14.11.2018 18:30 Uhr</span>
+     <span class="important-info">18:30 Uhr, 14. November</span> 2018<br>
+       <span class="important-info">Gerd Neumayer</span><br>
+       <span class="important-info"><a
+           href="https://goo.gl/maps/2S8Jj5LDPVw">Arabellastraße 4a, München</a></span>,
+       München
+       <a class="icon-link"
+          href="https://goo.gl/maps/2S8Jj5LDPVw"><i
+           class="fa fa-map-marker"></i></a><br>
+       Registrieren: <a href="https://www.meetup.com/de-DE/DT-Muc/events/256171514/">Meetup</a>
     </div>
   </section>
 
   <section id="description">
+     <p class="title">
+       Join Us
+     </p>
 
+     <p class="talk-title">
+       Workshop: Design Thinking trifft Improtheater
+     </p>
+     <p> Workshopleiter:
+       <b>Gerd Neumayer</b>, Bankkaufmann und Diplominformatiker (Univ.), seit 10 Jahren Improtheater in unterschiedlichen Facetten (aktives Spielen und Seminartätigkeit)</b>
+     </p>
+  
+  <p>
+      Improtheater ist in vielem dem Design Thinking sehr ähnlich:<br/><br/>
+
+Vertrauen: Wenn wir einen Prozess beschreiben und begleiten, sind unter anderem Teambuilding, Teamgeist, Vertrauen u.ä. wichtig.
+<br/><br/>
+Kreativität: Wir sind bestrebt, die kreativen Möglichkeiten, die in uns schlummern, zu wecken, zu entwickeln und einzubauen.
+<br/><br/>
+Empathie: Da wir alle unterschiedlich sind und unterschiedlich wahrnehmen, braucht es viel Empathie.
+<br/><br/>
+Für alle diese Teile des Puzzles, die ein Ganzes ergeben, gibt es viele verschiedene Möglichkeiten, die Potentiale zu fördern.
+<br/><br/>
+Wenn wir die Möglichkeit zu nutzen lernen, die Improtheater bietet, werden wir sehr schnell feststellen, dass wir spielerisch und absichtslos Dinge erreichen können. Schranken, Hemmungen oder festgefahrene Situationen können spielerisch betrachtet werden, und führen so zu einer neuen Sichtweise. Dabei ist das Scheitern ein integraler Bestandteil.
+<br/><br/>
+Da Improtheater keine theoretische Wissenschaft ist, wollen wir ein paar Improtechniken einfach ausprobieren – dazu laden wir euch herzlich ein.
+  </p>
+    
+    
     <p class="title">
       Hello, World!
     </p>
