--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
      <span class="important-info">18:30 Uhr, 14. November</span> 2018<br>
        <span class="important-info">Gerd Neumayer</span><br>
        <span class="important-info"><a
-           href="https://goo.gl/maps/2S8Jj5LDPVw">Arabellastraße 4a, München</a></span>,
+           href="https://goo.gl/maps/2S8Jj5LDPVw">Arabellastraße 4a</a></span>,
        München
        <a class="icon-link"
           href="https://goo.gl/maps/2S8Jj5LDPVw"><i
@@ -32,10 +32,6 @@
   </section>
 
   <section id="description">
-     <p class="title">
-       Join Us
-     </p>
-
      <p class="talk-title">
        Workshop: Design Thinking trifft Improtheater
      </p>
