--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
      <span class="important-info">18:30 Uhr, 14. November</span> 2018<br>
        <span class="important-info">Gerd Neumayer</span><br>
        <span class="important-info"><a
-           href="https://goo.gl/maps/2S8Jj5LDPVw">Arabellastraße 4a</a></span>,
+           href="https://www.google.com/maps/place/TNG+Technology+Consulting+GmbH/@48.1529279,11.6141348,17z/data=!3m1!4b1!4m5!3m4!1s0x479e75c2cc5d8929:0x83772c6bc19752f6!8m2!3d48.1529279!4d11.6163235?hl=de">Arabellastraße 4a</a></span>,
        München
        <a class="icon-link"
           href="https://goo.gl/maps/2S8Jj5LDPVw"><i
