--- a/index.html
+++ b/index.html
@@ -19,40 +19,32 @@
     </div>
 
     <div id="next-meetup">
-     <span class="important-info">18:30 Uhr, 14. November</span> 2018<br>
-       <span class="important-info">Gerd Neumayer</span><br>
+     <span class="important-info">18:30 Uhr, 20. May</span> 2019<br>
+       <span class="important-info">Design Thinking and AI<br>BMW Tech Nights</span><br>
        <span class="important-info"><a
-           href="https://www.google.com/maps/place/TNG+Technology+Consulting+GmbH/@48.1529279,11.6141348,17z/data=!3m1!4b1!4m5!3m4!1s0x479e75c2cc5d8929:0x83772c6bc19752f6!8m2!3d48.1529279!4d11.6163235?hl=de">Arabellastraße 4a</a></span>,
+           href="https://www.eventbrite.co.uk/e/design-thinking-and-ai-bmw-tech-nights-registration-61435315683#map-target">Bremer Str. 6</a></span>,
        München
        <a class="icon-link"
-          href="https://goo.gl/maps/2S8Jj5LDPVw"><i
+          href="https://www.eventbrite.co.uk/e/design-thinking-and-ai-bmw-tech-nights-registration-61435315683#map-target"><i
            class="fa fa-map-marker"></i></a><br>
-       Registrieren: <a href="https://www.meetup.com/de-DE/DT-Muc/events/256171514/">Meetup</a>
+       Registrieren: <a href="https://www.eventbrite.co.uk/e/design-thinking-and-ai-bmw-tech-nights-registration-61435315683">Eventbrite</a>
     </div>
   </section>
 
   <section id="description">
      <p class="talk-title">
-       Workshop: Design Thinking trifft Improtheater
+       Design Thinking and AI - in cooperation with BMW Tech Nights
      </p>
-     <p> Workshopleiter:
-       <b>Gerd Neumayer</b>, Bankkaufmann und Diplominformatiker (Univ.), seit 10 Jahren Improtheater in unterschiedlichen Facetten (aktives Spielen und Seminartätigkeit)</b>
+     <p>
+         <ul>
+    <li>Martin Appl, Head of Data Science Production BMW & Bernhard Waltl, Data Scientist BMW</li>
+    <li>Ben O’Hear, Revelate Design</li>
+    <li>Jennifer Heier, Head of UX-driven AI at Siemens</li>
+  </ul>
      </p>
   
   <p>
-      Improtheater ist in vielem dem Design Thinking sehr ähnlich:<br/><br/>
-
-Vertrauen: Wenn wir einen Prozess beschreiben und begleiten, sind unter anderem Teambuilding, Teamgeist, Vertrauen u.ä. wichtig.
-<br/><br/>
-Kreativität: Wir sind bestrebt, die kreativen Möglichkeiten, die in uns schlummern, zu wecken, zu entwickeln und einzubauen.
-<br/><br/>
-Empathie: Da wir alle unterschiedlich sind und unterschiedlich wahrnehmen, braucht es viel Empathie.
-<br/><br/>
-Für alle diese Teile des Puzzles, die ein Ganzes ergeben, gibt es viele verschiedene Möglichkeiten, die Potentiale zu fördern.
-<br/><br/>
-Wenn wir die Möglichkeit zu nutzen lernen, die Improtheater bietet, werden wir sehr schnell feststellen, dass wir spielerisch und absichtslos Dinge erreichen können. Schranken, Hemmungen oder festgefahrene Situationen können spielerisch betrachtet werden, und führen so zu einer neuen Sichtweise. Dabei ist das Scheitern ein integraler Bestandteil.
-<br/><br/>
-Da Improtheater keine theoretische Wissenschaft ist, wollen wir ein paar Improtechniken einfach ausprobieren – dazu laden wir euch herzlich ein.
+    For more information, please refer to <a href="https://www.eventbrite.co.uk/e/design-thinking-and-ai-bmw-tech-nights-registration-61435315683">event description</a> on Eventbrite.
   </p>
     
     
