--- a/index.html
+++ b/index.html
@@ -19,35 +19,40 @@
     </div>
 
     <div id="next-meetup">
-     <span class="important-info">18:30 Uhr, 20. May</span> 2019<br>
-       <span class="important-info">Design Thinking and AI<br>BMW Tech Nights</span><br>
-       <span class="important-info"><a
-           href="https://www.eventbrite.co.uk/e/design-thinking-and-ai-bmw-tech-nights-registration-61435315683#map-target">Bremer Str. 6</a></span>,
-       München
-       <a class="icon-link"
-          href="https://www.eventbrite.co.uk/e/design-thinking-and-ai-bmw-tech-nights-registration-61435315683#map-target"><i
-           class="fa fa-map-marker"></i></a><br>
-       Registrieren: <a href="https://www.eventbrite.co.uk/e/design-thinking-and-ai-bmw-tech-nights-registration-61435315683">Eventbrite</a>
+      <span class="important-info">18:30, 10. Juli</span> 2019<br>
+      <span class="important-info">Method Jam</span><br>
+      <span class="important-info"><a
+          href="https://www.meetup.com/DT-Muc/events/258555146/">Celonis SE</a></span>,
+      München
+      <a class="icon-link"
+         href="https://goo.gl/maps/SoKtFm3tgmJHjTb89"><i
+          class="fa fa-map-marker"></i></a><br>
+      Registrieren: <a href="https://www.meetup.com/DT-Muc/events/258555146/">Meetup.com</a>
     </div>
   </section>
 
   <section id="description">
-     <p class="talk-title">
-       Design Thinking and AI - in cooperation with BMW Tech Nights
-     </p>
-     <p>
-         <ul>
-    <li>Martin Appl, Head of Data Science Production BMW & Bernhard Waltl, Data Scientist BMW</li>
-    <li>Ben O’Hear, Revelate Design</li>
-    <li>Jennifer Heier, Head of UX-driven AI at Siemens</li>
-  </ul>
-     </p>
-  
-  <p>
-    For more information, please refer to <a href="https://www.eventbrite.co.uk/e/design-thinking-and-ai-bmw-tech-nights-registration-61435315683">event description</a> on Eventbrite.
-  </p>
-    
-    
+    <p class="talk-title">
+      DESIGN THINKING METHOD JAM
+    </p>
+    <p>
+      Wir alle arbeiten gern mit Design Thinking Methoden, die wir gut kennen und schon oft gemacht haben. Oder wir
+      wandeln Methoden um oder ab, weil sie so besser oder für einen anderen Zweck funktionieren. Bei diesem Meet-Up
+      geht es darum, über den eigenen Methoden-Tellerrand zu schauen und neue Methoden kennenzulernen und
+      auszuprobieren.
+      Der Method Jam ist ein bewährtes Format an der HPI School of Design Thinking, um den Methodenaustausch und
+      Weiterentwicklung unter den Coaches zu institutionalisieren und voneinander zu lernen. Außerdem bietet er die
+      Möglichkeit, neue Methoden risikofrei und mit viel Spaß auszuprobieren und Feedback zu sammeln.
+    </p>
+    <p>
+      Alle Teilnehmer*innen werden gebeten eine Methode mitzubringen/vorzubereiten, die sie in 30 Minuten mit einem Team
+      von 5-7 Personen vorstellen, ausprobieren und reflektieren können.
+      Jede*r Teilnehmer*in hat die Möglichkeit, seine/ihre Methode zu Beginn in einer Minute vorzustellen. Danach wählen
+      die Teilnehmer*innen aus, welche 4-5 Methoden dann in Kleingruppen ausprobiert werden sollen. In einer zweiten
+      Runde werden weitere Methoden ausprobiert, so dass auch die Moderator*innen der ersten Runde Gelegenheit haben,
+      eine neue Methode zu erlernen. Im Anschluss werden im Plenum alle Methoden kurz präsentiert und reflektiert.
+    </p>
+
     <p class="title">
       Hello, World!
     </p>
