--- a/index.html
+++ b/index.html
@@ -19,38 +19,79 @@
     </div>
 
     <div id="next-meetup">
-      <span class="important-info">18:30, 10. Juli</span> 2019<br>
-      <span class="important-info">Method Jam</span><br>
+      <span class="important-info">18:30, 8. Oktober</span> 2019<br>
+      <span class="important-info">Lost in Collaboration</span><br>
       <span class="important-info"><a
-          href="https://www.meetup.com/DT-Muc/events/258555146/">Celonis SE</a></span>,
-      München
+          href="https://goo.gl/maps/xMMQaPjm1exHvG9b9">TNG Technology Consulting</a></span>
       <a class="icon-link"
-         href="https://goo.gl/maps/SoKtFm3tgmJHjTb89"><i
+         href="https://goo.gl/maps/xMMQaPjm1exHvG9b9"><i
           class="fa fa-map-marker"></i></a><br>
-      Registrieren: <a href="https://www.meetup.com/DT-Muc/events/258555146/">Meetup.com</a>
+      Registrieren: <a href="https://www.meetup.com/DT-Muc/events/265017904">Meetup</a>
     </div>
   </section>
 
   <section id="description">
     <p class="talk-title">
-      DESIGN THINKING METHOD JAM
+      Lost in Collaboration – Overcoming the Challenges of Agile Teamwork
     </p>
     <p>
-      Wir alle arbeiten gern mit Design Thinking Methoden, die wir gut kennen und schon oft gemacht haben. Oder wir
-      wandeln Methoden um oder ab, weil sie so besser oder für einen anderen Zweck funktionieren. Bei diesem Meet-Up
-      geht es darum, über den eigenen Methoden-Tellerrand zu schauen und neue Methoden kennenzulernen und
-      auszuprobieren.
-      Der Method Jam ist ein bewährtes Format an der HPI School of Design Thinking, um den Methodenaustausch und
-      Weiterentwicklung unter den Coaches zu institutionalisieren und voneinander zu lernen. Außerdem bietet er die
-      Möglichkeit, neue Methoden risikofrei und mit viel Spaß auszuprobieren und Feedback zu sammeln.
+      Agile methods and teams are a popular choice to organize work both in Agile’s original context, i.e., software
+      development, as well as in the IT context in general. Over the past years, more and more organizations have
+      switched to agile methods and structures. Among these, there is a substantial share of organizations representing
+      industries other than the “agile-typical” IT environment.
     </p>
     <p>
-      Alle Teilnehmer*innen werden gebeten eine Methode mitzubringen/vorzubereiten, die sie in 30 Minuten mit einem Team
-      von 5-7 Personen vorstellen, ausprobieren und reflektieren können.
-      Jede*r Teilnehmer*in hat die Möglichkeit, seine/ihre Methode zu Beginn in einer Minute vorzustellen. Danach wählen
-      die Teilnehmer*innen aus, welche 4-5 Methoden dann in Kleingruppen ausprobiert werden sollen. In einer zweiten
-      Runde werden weitere Methoden ausprobiert, so dass auch die Moderator*innen der ersten Runde Gelegenheit haben,
-      eine neue Methode zu erlernen. Im Anschluss werden im Plenum alle Methoden kurz präsentiert und reflektiert.
+      Agile methods promise a multitude of benefits, but bear plenty of challenges at the same time. These challenges
+      mainly touch upon the interpersonal relationships, since agile substantially affects leadership and collaboration
+      aspects: The teams bear more responsibility and have to self-organize themselves more than before, the leaders’
+      role and task structure adapt to the teams’ autonomy, and the customers participate to a higher extent in the
+      product development process.
+    </p>
+    <p>
+      Since research on agile team collaboration from an interpersonal perspective is rather scarce, this talk is
+      intended to give a few insights from early study results and on team collaboration in general. </p>
+
+    <p>
+      SPEAKER:
+
+    <p>
+      Professor Dr. Martin Hoegl<br>
+      Head of Institute<br>
+      <a href="http://www.ilo.bwl.lmu.de">LMU website</a><br>
+      <a href="http://www.linkedin.com/in/hoegl">LinkedIn</a><br>
+
+    <p>
+      Institute for Leadership and Organization (ILO)
+      Ludwig-Maximilians-Universität München
+
+    <p>
+      Professor Martin Hoegl is Head of the Institute for Leadership and Organization at Ludwig-Maximilians-Universität
+      München. Before joining LMU Munich, Professor Hoegl served on the faculties of Washington State University (USA),
+      Bocconi University (Milan, Italy) and WHU – Otto Beisheim School of Management (Vallendar, Germany). Moreover,
+      Martin Hoegl held visiting professorships at the Kellogg School of Management (Northwestern Univ., USA), National
+      Sun Yat-Sen University (Taiwan), Curtin Univ. (Perth, Australia), Portland State Univ. (USA) as well as the Univ.
+      of British Columbia (Vancouver, Canada).
+
+    <p>
+      Professor Hoegl has extensive experience in working with executive audiences at various levels of seniority in
+      Europe, North America, and Asia. He has conducted research projects with major companies worldwide. His work
+      focuses on the following key areas of leadership:
+
+    <ul>
+      <li>Leading People: Leadership and Teamwork, Trust and Intercultural Collaboration, Multi-Teaming and New Forms of
+        Collaboration, Stress and Coping, Resilience and Learning from Failure
+
+      <li>Leading Innovation: Innovation Team Agility, Thematic Thinking and Opportunity Recognition, Idea Creation and
+        Selection, Leading Innovation Projects, Innovation under Constraints, Sustainable Innovation
+
+      <li>Leading Organizations: Organizational Agility and Strategy Execution, Change Management & Organizational
+        Transformation, Inter-organizational Collaboration, Dispersed/Virtual Organizations
+    </ul>
+
+    <p>
+      Professor Hoegl has received multiple awards for teaching and research, including the Kellogg-WHU EMBA Best
+      Teacher Award and the Richard Beckhard Prize from the MIT Sloan Management Review for the article ‘How to manage
+      virtual teams’.
     </p>
 
     <p class="title">
