--- a/index.html
+++ b/index.html
@@ -19,79 +19,42 @@
     </div>
 
     <div id="next-meetup">
-      <span class="important-info">18:30, 8. Oktober</span> 2019<br>
-      <span class="important-info">Lost in Collaboration</span><br>
+      <span class="important-info">18:30, 12. November</span> 2019<br>
+      <span class="important-info">Design Thinking your life</span><br>
       <span class="important-info"><a
-          href="https://goo.gl/maps/xMMQaPjm1exHvG9b9">TNG Technology Consulting</a></span>
+          href="https://www.google.com/maps/search/?api=1&query=48.150097%2C11.546968">SAP Hybris</a></span>
       <a class="icon-link"
-         href="https://goo.gl/maps/xMMQaPjm1exHvG9b9"><i
+         href="https://www.google.com/maps/search/?api=1&query=48.150097%2C11.546968"><i
           class="fa fa-map-marker"></i></a><br>
-      Registrieren: <a href="https://www.meetup.com/DT-Muc/events/265017904">Meetup</a>
+      Registrieren: <a href="https://www.meetup.com/DT-Muc/events/265017972/">Meetup</a>
     </div>
   </section>
 
   <section id="description">
     <p class="talk-title">
-      Lost in Collaboration – Overcoming the Challenges of Agile Teamwork
+      Crash course „Design Thinking your life“
     </p>
     <p>
-      Agile methods and teams are a popular choice to organize work both in Agile’s original context, i.e., software
-      development, as well as in the IT context in general. Over the past years, more and more organizations have
-      switched to agile methods and structures. Among these, there is a substantial share of organizations representing
-      industries other than the “agile-typical” IT environment.
-    </p>
-    <p>
-      Agile methods promise a multitude of benefits, but bear plenty of challenges at the same time. These challenges
-      mainly touch upon the interpersonal relationships, since agile substantially affects leadership and collaboration
-      aspects: The teams bear more responsibility and have to self-organize themselves more than before, the leaders’
-      role and task structure adapt to the teams’ autonomy, and the customers participate to a higher extent in the
-      product development process.
-    </p>
-    <p>
-      Since research on agile team collaboration from an interpersonal perspective is rather scarce, this talk is
-      intended to give a few insights from early study results and on team collaboration in general. </p>
+      We all know Design Thinking as methodology and mindset at work. In a team oriented and user centric way we use the process to solve our users problems with innovative solutions.
+
+      <p>
+      Interestingly the same methodology can be applied to personal challenges.
+      You don’ t believe it? Then join us for this after-work design thinking crash course on „Design Thinking your life“ and find it out.
 
     <p>
-      SPEAKER:
+      With the help of our coaches, you’ll work together in teams of two to find your own little design challenge. Together with your vis-a-vis you will work on creative ideas and built an action plan to bring the solution into your life.
 
     <p>
-      Professor Dr. Martin Hoegl<br>
-      Head of Institute<br>
-      <a href="http://www.ilo.bwl.lmu.de">LMU website</a><br>
-      <a href="http://www.linkedin.com/in/hoegl">LinkedIn</a><br>
+      After the crash course, you will also have the possibility to see and experience some of our innovation showcases. We build prototypes with Design Thinking, SAP software and new technologies (such as AR, VR, ML) to inspire our development teams and engage with our customers.
 
     <p>
-      Institute for Leadership and Organization (ILO)
-      Ludwig-Maximilians-Universität München
+      The SAP Munich Design Thinkers are looking forward to spend a fun evening with you in our own Labs and Innovation space. See you there!
 
     <p>
-      Professor Martin Hoegl is Head of the Institute for Leadership and Organization at Ludwig-Maximilians-Universität
-      München. Before joining LMU Munich, Professor Hoegl served on the faculties of Washington State University (USA),
-      Bocconi University (Milan, Italy) and WHU – Otto Beisheim School of Management (Vallendar, Germany). Moreover,
-      Martin Hoegl held visiting professorships at the Kellogg School of Management (Northwestern Univ., USA), National
-      Sun Yat-Sen University (Taiwan), Curtin Univ. (Perth, Australia), Portland State Univ. (USA) as well as the Univ.
-      of British Columbia (Vancouver, Canada).
-
+      PEOPLE
     <p>
-      Professor Hoegl has extensive experience in working with executive audiences at various levels of seniority in
-      Europe, North America, and Asia. He has conducted research projects with major companies worldwide. His work
-      focuses on the following key areas of leadership:
 
-    <ul>
-      <li>Leading People: Leadership and Teamwork, Trust and Intercultural Collaboration, Multi-Teaming and New Forms of
-        Collaboration, Stress and Coping, Resilience and Learning from Failure
-
-      <li>Leading Innovation: Innovation Team Agility, Thematic Thinking and Opportunity Recognition, Idea Creation and
-        Selection, Leading Innovation Projects, Innovation under Constraints, Sustainable Innovation
-
-      <li>Leading Organizations: Organizational Agility and Strategy Execution, Change Management & Organizational
-        Transformation, Inter-organizational Collaboration, Dispersed/Virtual Organizations
-    </ul>
-
-    <p>
-      Professor Hoegl has received multiple awards for teaching and research, including the Kellogg-WHU EMBA Best
-      Teacher Award and the Richard Beckhard Prize from the MIT Sloan Management Review for the article ‘How to manage
-      virtual teams’.
+      Your hosts are the Design Thinking coaches from SAP in Munich, namely Agnieszka, Alice, Denise, Lilit, Sebastian and Yevgeny. We are all having different job roles, like agile coach, scrum master, developer, presales expert, storyteller and designer. And we are all united under the mission to bring design thinking to daily (work) life.
     </p>
 
     <p class="title">
