--- a/index.html
+++ b/index.html
@@ -19,43 +19,46 @@
     </div>
 
     <div id="next-meetup">
-      <span class="important-info">18:30, 12. November</span> 2019<br>
-      <span class="important-info">Design Thinking your life</span><br>
+      <span class="important-info">18:30, 20. February</span> 2020<br>
+      <span class="important-info">Scaling Transformation by Design</span><br>
       <span class="important-info"><a
-          href="https://www.google.com/maps/search/?api=1&query=48.150097%2C11.546968">SAP Hybris</a></span>
+          href="https://www.google.com/maps/search/?api=1&query=48.115242%2C11.597046">Nokia</a></span>
       <a class="icon-link"
-         href="https://www.google.com/maps/search/?api=1&query=48.150097%2C11.546968"><i
+         href="https://www.google.com/maps/search/?api=1&query=48.115242%2C11.597046"><i
           class="fa fa-map-marker"></i></a><br>
-      Registrieren: <a href="https://www.meetup.com/DT-Muc/events/265017972/">Meetup</a>
+      Registrieren: <a href="https://www.meetup.com/DT-Muc/events/268602228">Meetup</a>
     </div>
   </section>
 
   <section id="description">
     <p class="talk-title">
-      Crash course „Design Thinking your life“
+      Scaling Transformation by Design
     </p>
     <p>
-      We all know Design Thinking as methodology and mindset at work. In a team oriented and user centric way we use the process to solve our users problems with innovative solutions.
-
-      <p>
-      Interestingly the same methodology can be applied to personal challenges.
-      You don’ t believe it? Then join us for this after-work design thinking crash course on „Design Thinking your life“ and find it out.
+    Over the last years, design & design thinking have become the key success factor for many large, global companies, as society has moved from being product-driven to user-centered, from “technology first” to “human first”, from “making people want things” to “making things people want”. Studies have shown that design-driven companies outperform considerably in terms of revenue growth (by 100%+) and Total Return to Shareholder (70%+), the return on investment can be as much as 300%.
 
     <p>
-      With the help of our coaches, you’ll work together in teams of two to find your own little design challenge. Together with your vis-a-vis you will work on creative ideas and built an action plan to bring the solution into your life.
+    With this in mind, we decided to develop, test and incubate this approach in Nokia Transformation. We have been doing this during the last 1.5 years, under the name “Transformation by Design”, gathering learnings along the way from more than 70 design projects and sprints, on topics ranging from product innovation, to strategy, to organization redesign.
 
     <p>
-      After the crash course, you will also have the possibility to see and experience some of our innovation showcases. We build prototypes with Design Thinking, SAP software and new technologies (such as AR, VR, ML) to inspire our development teams and engage with our customers.
+    Want to hear more about how we scaled Transformation by Design in a company with 100'000 employees in one year time on a shoestring budget? - Join us to hear about the approach that Iana Kouris and her team took at Nokia to make 1000’s of employees aware, enable 100’s to apply and 10’s to lead projects based on design mindset and practices.
 
     <p>
-      The SAP Munich Design Thinkers are looking forward to spend a fun evening with you in our own Labs and Innovation space. See you there!
+    <b>SPEAKER</b>
 
     <p>
-      PEOPLE
-    <p>
+    Dr. Iana Kouris<br>
+    Design Lead @ Nokia<br>
+    <a href="https://www.linkedin.com/in/iana%E2%80%94k/">Linkedin</a>
 
-      Your hosts are the Design Thinking coaches from SAP in Munich, namely Agnieszka, Alice, Denise, Lilit, Sebastian and Yevgeny. We are all having different job roles, like agile coach, scrum master, developer, presales expert, storyteller and designer. And we are all united under the mission to bring design thinking to daily (work) life.
-    </p>
+    <p>
+    Dr. Iana Kouris is driving “Transformation by Design” approach, unlocking and amplifying creativity, collaboration and user centricity across Nokia and beyond. She is a serial corporate intrapreneur (set up 5+ new organizations), with 13 years of experience in leadership roles spanning business, design and technology. Iana believes that we need to connect business, design and technology to create value. And that inspiring and bringing together people to achieve extraordinary outcomes is the most important mission of design(-ers).
+
+    <p>
+    Since joining Nokia ~6 years ago, Iana held business and creative roles as part of several leadership teams at Nokia. Before that, Iana spent 7 years in management consulting at McKinsey & Company Inc., driving projects on strategic, operational and creative topics.
+
+    <p>
+    Iana holds a Dr. degree from RWTH Aachen University, and further degrees in Mathematics, Philosophy, Economics, Fine Arts and Music.
 
     <p class="title">
       Hello, World!
