--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 
         <div class="person-info">
           <span class="important-info">Gerhard Müller</span><br>
-          <a href="http://www.tngtech.com">TNG Technology Consulting GmbH</a><br>
-          <a href="mailto:gerhard.mueller@tngtech.com">gerhard.mueller@tngtech.com</a><br>
+          <a href="https://LLL4Future.de">Gesellschaft für Lebenslanges Lernen</a><br>
+          <a href="mailto:gerhard.mueller@tngtech.com">gerhard.mueller@LLL4Future.de</a><br>
           <a href="https://twitter.com/gmtng">@gmtng</a>
         </div>
       </div>
@@ -97,7 +97,7 @@
 
         <div class="person-info">
           <span class="important-info">Tae Won Ha</span><br>
-          <a href="http://www.tngtech.com">TNG Technology Consulting GmbH</a><br>
+          <a href="https://www.tngtech.com">TNG Technology Consulting GmbH</a><br>
           <a href="mailto:taewon.ha@tngtech.com">taewon.ha@tngtech.com</a><br>
           <a href="https://twitter.com/hataewon">@hataewon</a>
         </div>
@@ -107,7 +107,7 @@
 
         <div class="person-info">
           <span class="important-info">Steffi Kieffer</span><br>
-          <a href="http://revelate.de">revelate</a><br>
+          <a href="https://revelate.de">revelate</a><br>
           <a href="mailto:steffi@revelate.de">steffi@revelate.de</a><br>
           <a href="https://twitter.com/steffikieffer">@steffikieffer</a>
         </div>
